Finish cero section and section number one

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <li class="navbar-element navbar-element-1"><a href="#" class="navbar-element-a nunito-font-family">Articles</a> </li>
                 <li class="navbar-element navbar-element-2"><a href="#" class="navbar-element-a nunito-font-family">Guides</a></li>
                 <li class="navbar-element navbar-element-3"><a href="#" class="navbar-element-a nunito-font-family">Books</a></li>
-                <li class="navbar-element navbar-element-4"><a href="#" class="navbar-element-a nunito-font-family">Workshops</a></li>
+                <li class="navbar-element navbar-element-4"><a href="#" class="navbar-element-a nunito-font-family">Events</a></li>
                 <li class="navbar-element navbar-element-5"><a href="#" class="navbar-element-a nunito-font-family">Membership</a></li>
-                <li class="navbar-element navbar-element-6"><a href="#" class="navbar-element-a nunito-font-family">Job Board</a></li>
+                <li class="navbar-element navbar-element-6"><a href="#" class="navbar-element-a nunito-font-family">Jobs</a></li>
                 <li class="navbar-element navbar-element-7">
                     <a href="#" class="text-more-catmenu nunito-font-family">More</a>
                     <a href="#">
@@ -33,86 +33,85 @@
         </div>
     </header>
     <main>
-        <div class="firts-section">
-            <section class="firts-section-without-aside">
-                <h6 class="h6-font-size">.</h6>
-                <article class="firts-article-firts-section">
-                    <h6 class="h6-font-size">.</h6>
-                    <div class="title-firts-article-firts-section">
-                        <div class="picture-title-firts-article-firts-section">
-                            <img src="assets/default.jpg" alt="example-picture" class="width-10rem">
+        <div class="cero-section">
+            <div class="position-absolute">
+                <div class="title-page">
+                    <div class="title-text">
+                        Don’t Miss These Latest
+                        <br>
+                        Articles
+                    </div>
+                    <div class="title-page-icon-button">
+                        <div class="White-square">
                         </div>
-                        <div class="text-title-firts-article-firts-section">
-                            <div class="margin-height-1rem">
-                                <a href="#" class="text-color-black nunito-font-family">Suzanne Scacca</a> <span class="text-color-999 kufam-font-family">Wrote</span>
-                            </div>
-                            <div class="nunito-font-family margin-height-1rem font-size-3rem">
-                                How To Make More Money Selling Shopify Apps In 2021
-                            </div>
-                            <div class="margin-height-1rem">
-                                <span class="playfair-font-family">jan 7, 2021</span> <span class="text-color-999 kufam-font-family">in</span> <a href="#" class="text-color-black nunito-font-family text-color-666">Business</a>
-                            </div>
-                        </div>
+                        <button class="button-title">
+                            Bring red back
+                        </button>
                     </div>
-                    <div class="content-firts-article-firts-section playfair-font-family paragraph-format">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus odio delectus quaerat numquam nesciunt aperiam distinctio vitae consectetur molestiae eligendi!
-                    </div>
-                    <div>
-                        <a href="#" class="text-color-black nunito-font-family">
-                            Continue reading ►
-                        </a>
-                    </div>
-                </article>
-                <article class="margin-top-2rem display-flex-dad">
-                    <h6 class="h6-font-size">.</h6>
-                    <div class="flex-grow-son-1">
-                        <img src="assets/default.jpg" alt="example-picture" class="width-7rem">
-                    </div>
-                    <div class="flex-grow-son-5">
-                        <div>
-                            <a href="#" class="text-color-black nunito-font-family">Noam Rosenthal</a> <span class="playfair-font-family">jan 5, 2021</span> <span class="text-color-999 kufam-font-family">in</span> <a href="#" class="text-color-black nunito-font-family text-color-666">Design</a>
-                        </div>
-                        <div class="nunito-font-family margin-height-1rem font-size-2rem">
-                            Should The Web Expose Hardware Capabilities?
+                </div>
+            </div>
+        </div>
+        <div class="section-number-one">
+            <div class="display-flex-dad">
+                <div class="rectangle-section-number-one background-color-666 padding-top-8rem">
+                    <div class="display-flex-dad margin-bottom-2rem">
+                        <img src="assets/default.jpg" alt="example-picture" class="picture-profile-firts-section">
+                        <div class="title-next-to-the-main-image text-color-white">
+                            Jurn Wise
                         </div>
                     </div>
-                </article>
-                <article class="margin-top-2rem display-flex-dad">
-                    <h6 class="h6-font-size">.</h6>
-                    <div class="flex-grow-son-1">
-                        <img src="assets/default.jpg" alt="example-picture" class="width-7rem">
+                    <div class="margin-bottom-2rem text-color-white">
+                        Lorem ipsum dolor sit amet, ne sed doming omnesque salutandi, no nonumy.
                     </div>
-                    <div class="flex-grow-son-5">
-                        <div>
-                            <a href="#" class="text-color-black nunito-font-family">Frederick O’Brien</a> <span class="playfair-font-family">/ jan 4, 2021</span> <span class="text-color-999 kufam-font-family">in</span> <a href="#" class="text-color-black nunito-font-family text-color-666">Opinion Column</a>
-                        </div>
-                        <div class="nunito-font-family margin-height-1rem font-size-2rem">
-                            Towards An Ad-Free Web: Diversifying The Online Economy
+                    <div class="text-color-white">
+                        ►
+                    </div>
+                </div>
+                <div class="rectangle-section-number-one background-color-999 padding-top-8rem">
+                    <div class="display-flex-dad margin-bottom-2rem">
+                        <img src="assets/default.jpg" alt="example-picture" class="picture-profile-firts-section">
+                        <div class="title-next-to-the-main-image text-color-white">
+                            Jurn Wise
                         </div>
                     </div>
-                </article>
-            </section>
-            <aside class="firts-aside">
-                <div>
-                    <img src="assets/default.jpg" alt="example-picture">
+                    <div class="margin-bottom-2rem text-color-white">
+                        Lorem ipsum dolor sit amet, ne sed doming omnesque salutandi, no nonumy.
+                    </div>
+                    <div class="text-color-white">
+                        ►
+                    </div>
                 </div>
-                <div class="line-height-1rem">
-                    Smashing Email Newsletter
+            </div>
+            <div class="display-flex-dad">
+                <div class="rectangle-section-number-one background-color-999 padding-top-8rem">
+                    <div class="display-flex-dad margin-bottom-2rem">
+                        <img src="assets/default.jpg" alt="example-picture" class="picture-profile-firts-section">
+                        <div class="title-next-to-the-main-image text-color-white">
+                            Jurn Wise
+                        </div>
+                    </div>
+                    <div class="margin-bottom-2rem text-color-white">
+                        Lorem ipsum dolor sit amet, ne sed doming omnesque salutandi, no nonumy.
+                    </div>
+                    <div class="text-color-white">
+                        ►
+                    </div>
                 </div>
-                <div class="line-height-1rem">
-                    Useful front-end & UX tips, delivered once a week.
+                <div class="rectangle-section-number-one background-color-666 padding-top-8rem">
+                    <div class="display-flex-dad margin-bottom-2rem">
+                        <img src="assets/default.jpg" alt="example-picture" class="picture-profile-firts-section">
+                        <div class="title-next-to-the-main-image text-color-white">
+                            Jurn Wise
+                        </div>
+                    </div>
+                    <div class="margin-bottom-2rem text-color-white">
+                        Lorem ipsum dolor sit amet, ne sed doming omnesque salutandi, no nonumy.
+                    </div>
+                    <div class="text-color-white">
+                        ►
+                    </div>
                 </div>
-                <div class="line-height-1rem">
-                    With tools to help you get your work done better. Subscribe and get Vitaly’s Smart Interface Design Checklists PDF — in your inbox. 🎁
-                </div>
-                <div class="display-flex-dad">
-                    <input type="text">
-                    <button type="button">Meow!</button>
-                </div>
-                <div class="line-height-1rem">
-                    On front-end & UX. Trusted by 190.000 folks.
-                </div>
-            </aside>
+            </div>
         </div>
         <div class="latest-articles paragraph-format">
             SEE ALL LATEST ARTICLES ►
