fix issues of lintr

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="title-page-icon-button">
                         <div class="White-square">
                         </div>
-                        <button class="button-title">
+                        <button class="button-title" type="button">
                             Bring red back
                         </button>
                     </div>
